[gd_scene load_steps=3 format=3 uid="uid://bvac16n6oqrbr"]

[ext_resource type="Texture2D" uid="uid://dnh8q7oqem8kt" path="res://assets/generated/map.png" id="1_833wm"]
[ext_resource type="Script" path="res://Scenes/UI/world_map.gd" id="2_e7prb"]

[node name="WorldMap" type="TextureRect"]
texture_filter = 1
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource("1_833wm")
stretch_mode = 4
script = ExtResource("2_e7prb")

[node name="BaseCamp" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BaseCamp"]
polygon = PackedVector2Array(958, 615, 960, 712, 1002, 803, 1113, 769, 1180, 760, 1325, 672, 1340, 579, 1243, 551, 1153, 571, 1014, 555)

[node name="Lake" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Lake"]
polygon = PackedVector2Array(771, 111, 764, 149, 668, 241, 651, 286, 665, 332, 726, 351, 787, 317, 886, 235, 957, 167, 943, 104, 839, 77)

[node name="Forest" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Forest"]
polygon = PackedVector2Array(966, 97, 966, 180, 1013, 218, 1159, 262, 1162, 330, 1227, 421, 1356, 424, 1404, 273, 1367, 202, 1168, 34)

[connection signal="mouse_entered" from="BaseCamp" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_entered" from="Lake" to="." method="_on_lake_mouse_entered"]
[connection signal="mouse_entered" from="Forest" to="." method="_on_forest_mouse_entered"]
